CSDEV/objects/HAE_Region_To_Business_Hour_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>HAE_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HAE: Denotes if the record is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAE_Business_Hour_Name__c</fullName>
        <label>Business Hour Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Region_Name__c</fullName>
        <description>HAE: This filed represents the region names.</description>
        <label>Region Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Region To Business Hour Mapping</label>
    <pluralLabel>Region To Business Hour Mappings</pluralLabel>
</CustomObject>